--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/themes": "^2.0.3",
+    "@radix-ui/themes": "3",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^2.2.5"
   }
 }
