--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "3",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@types/react": "latest",
+    "react": "canary",
+    "react-dom": "canary",
     "swr": "^2.2.5"
   }
 }
